Fix crash in Folder destructor

Especially visible with Qt 4.8.0 qDeleteAll() changes, but might also
fix older bugs.

BUG: 285938
CCBUG: 193780
FIXED-IN: 4.7.4
REVIEW: 102981